[project]
name = "comfygit-env-local-env"
version = "0.1.0"
requires-python = "==3.11.*"
dependencies = [
    "aiohttp>=3.11.8",
    "alembic",
    "av>=14.2.0",
    "comfy-aimdo>=0.1.8",
    "comfy-kitchen>=0.2.7",
    "comfyui-embedded-docs==0.4.1",
    "comfyui-frontend-package==1.38.14",
    "comfyui-workflow-templates==0.8.43",
    "einops",
    "kornia>=0.7.1",
    "numpy>=1.25.0",
    "pillow",
    "psutil",
    "pydantic~=2.0",
    "pydantic-settings~=2.0",
    "pyyaml",
    "requests",
    "safetensors>=0.4.2",
    "scipy",
    "sentencepiece",
    "spandrel",
    "sqlalchemy",
    "tokenizers>=0.13.3",
    "torch",
    "torchaudio",
    "torchsde",
    "torchvision",
    "tqdm",
    "transformers>=4.50.3",
    "yarl>=1.18.0",
]

[tool.comfygit]
schema_version = 2
comfyui_version = "v0.14.2"
comfyui_version_type = "release"
comfyui_commit_sha = "185c61dc26cdc631a1fd57b53744b67393a97fc6"
python_version = "3.11"

[tool.comfygit.nodes.comfygit-manager]
name = "comfygit-manager"
registry_id = "comfygit-manager"
repository = "https://github.com/comfygit-ai/comfygit-manager"
version = "0.0.23"
download_url = "https://cdn.comfy.org/akatz/comfygit-manager/0.0.23/node.zip"
source = "registry"

[tool.comfygit.nodes.premium-button-bar]
name = "premium-button-bar"
version = "dev"
source = "development"

[tool.comfygit.nodes.quick-connections]
name = "quick-connections"
registry_id = "quick-connections"
repository = "https://github.com/niknah/quick-connections"
version = "1.0.23"
download_url = "https://cdn.comfy.org/niknah/quick-connections/1.0.23/node.zip"
source = "registry"

[tool.comfygit.nodes.Comfyui-Resolution-Master]
name = "Comfyui-Resolution-Master"
registry_id = "Comfyui-Resolution-Master"
repository = "https://github.com/Azornes/Comfyui-Resolution-Master"
version = "1.5.14"
download_url = "https://cdn.comfy.org/azornes/Comfyui-Resolution-Master/1.5.14/node.zip"
source = "registry"

[tool.comfygit.nodes.glassbar-extension]
name = "glassbar-extension"
version = "dev"
source = "development"
[tool.uv]
exclude-dependencies = ["opencv-contrib-python", "opencv-python", "opencv-python-headless"]
[dependency-groups]
comfygit-manager-b2d41ad7 = [
    "comfygit-core==0.3.20",
    "watchdog>=6.0.0",
    "xxhash>=3.5.0",
    "zeroconf>=0.131.0",
]
comfygit-system = ["uv>=0.7"]
